--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "NODE_ENV=testing mocha"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
     "bookshelf": "^0.10.3",
@@ -20,10 +22,13 @@
     "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
+    "mocha": "^3.4.2",
     "morgan": "~1.8.1",
     "mysql": "^2.13.0",
+    "node-mocks-http": "^1.6.4",
     "path": "^0.12.7",
     "serve-favicon": "~2.4.2",
+    "supertest": "^3.0.0",
     "uuid": "^3.1.0",
     "validatorjs": "^3.13.3"
   }
