--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.13.0",
     "node-mocks-http": "^1.6.4",
     "path": "^0.12.7",
+    "redis": "^2.7.1",
     "serve-favicon": "~2.4.2",
     "supertest": "^3.0.0",
     "uuid": "^3.1.0",
